Fix contact footer on mobile

--- a/client/shared.sass
+++ b/client/shared.sass
@@ -66,7 +66,11 @@ table.table
         width: 100%
         bottom: 0
         margin: 0
+        padding: 0
         text-align: right
+
+        @media (max-width: $mobile)
+            right: 0
 
         li
             display: inline-block
